--- a/Assignment 3/Kurinjikannan/index.html
+++ b/Assignment 3/Kurinjikannan/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title> PRIYA HOSPITAL </title>
 	<link rel="stylesheet" type="text/css" href="https://hospital-webpage-static.s3.jp-tok.cloud-object-storage.appdomain.cloud">
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script>
   window.watsonAssistantChatOptions = {
     integrationID: "de71c671-24b6-4437-a7ac-18945c99340c", // The ID of this integration.
